--- a/css/styles.css
+++ b/css/styles.css
@@ -1940,7 +1940,8 @@ img.testimonial-picture-2 {
   } */
 
     .page-header_item .navigation-list li{
-        margin-right:0;
+        margin-right:auto;
+        margin-left:auto;
     }
 
     .page-header_item .navigation-list li a {
@@ -2141,7 +2142,8 @@ a.prev-case{
     }
 
     .page-header_item .navigation-list li{
-        margin-right:0;
+        margin-right:auto;
+        margin-left:auto;
     }
 
     .page-header_item .navigation-list li a {
